New
    elif customer_id == "shawn":
    ^^^^
SyntaxError: invalid syntax
